--- a/package.json
+++ b/package.json
@@ -105,5 +105,12 @@
         ]
       }
     }
+  },
+  "providedServices": {
+    "linter": {
+      "versions": {
+        "2.0.0": "provideLinter"
+      }
+    }
   }
 }
